testdata/baselines/reference/submodule/conformance/override_js2.errors.txt
a.js(6,17): error TS8010: Type annotations can only be used in TypeScript files.
a.js(7,5): error TS4119: This member must have a JSDoc comment with an '@override' tag because it overrides a member in the base class 'B'.
a.js(11,5): error TS4122: This member cannot have a JSDoc comment with an '@override' tag because it is not declared in the base class 'B'.
a.js(17,5): error TS4121: This member cannot have a JSDoc comment with an '@override' tag because its containing class 'C' does not extend another class.
a.js(19,5): error TS4121: This member cannot have a JSDoc comment with an '@override' tag because its containing class 'C' does not extend another class.


==== a.js (5 errors) ====
    class B {
        foo (v) {}
        fooo (v) {}
    }
    
    class D extends B {
                    ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
        foo (v) {}
        ~~~
!!! error TS4119: This member must have a JSDoc comment with an '@override' tag because it overrides a member in the base class 'B'.
        /** @override */
        fooo (v) {}
        /** @override */
        bar(v) {}
        ~~~
!!! error TS4122: This member cannot have a JSDoc comment with an '@override' tag because it is not declared in the base class 'B'.
    }
    
    class C {
        foo () {}
        /** @override */
        fooo (v) {}
        ~~~~
!!! error TS4121: This member cannot have a JSDoc comment with an '@override' tag because its containing class 'C' does not extend another class.
        /** @override */
        bar(v) {}
        ~~~
!!! error TS4121: This member cannot have a JSDoc comment with an '@override' tag because its containing class 'C' does not extend another class.
    }